added facebook tag

--- a/HTML/anchor.html
+++ b/HTML/anchor.html
@@ -9,6 +9,7 @@
     <a href="https://www.knowledgegate.ai/">Knowledge Gate </a> <br>
     <a href="https://www.google.com/"> google</a> <br/>
     <a href="https://www.instagram.com/">Instagram</a>
+    <a href="https://www.facebook.com/">facebook</a>
     
 </body>
 </html>
